test-suite/tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/input.essence:2:11:
  |
2 | such that true subsetEq s 
  |           ^^^^
Type error:
	Expected: "Set MSet funcition or relation"
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_set_expr/input.essence:2:25:
  |
2 | such that true subsetEq s 
  |                         ^
Type error:
	Expected: bool
	Got: set of bool

